Update README for TasTimer with RUFUS Cloud API documentation
Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>